--- a/index.css
+++ b/index.css
@@ -1,7 +1,4 @@
-html, body {
-  height: 100%;
-  overflow: hidden;
-}
+html, body {margin: 0; padding: 0; overflow: hidden}
 
 html, body {
   height: 100%;
